# melon

./: .gitignore  .gitmodules  README.md
contracts/: foundry.toml
contracts/src/: Constants.sol  KZGVerifier.sol  Pairing.sol
contracts/test/: Verifier.t.sol
contracts/test/files/: commitment.json  witness.json
node/: Cargo.toml  witness.json
node/benches/: commit.rs  commit_coeff_form.rs  commit_eval_form.rs  create_witness.rs  create_witness_coeff_form.rs  create_witness_eval_form.rs  fft.rs  poly_arithmetic.rs  poly_verify.rs  poly_verify_coeff_form.rs  verify_eval_coeff_form.rs
node/src/: lib.rs
node/src/kzg/: coeff_form.rs  eval_form.rs  ft.rs  mod.rs  polynomial.rs  utils.rs
