[package]
name = "melon"
version = "0.1.0"
edition = "2018"
license = "MIT"


[profile.bench]
debug = true

[dependencies]
pairing = "0.22.0"
thiserror = "1.0.26"
rand = { version = "0.8.4", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
blstrs = "0.6.1"
rayon = { version = "1.5.1", optional = true}

[dev-dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
lazy_static = "1.4.0"
criterion = "0.3"
pprof = { version = "0.6", features = ["flamegraph"] }
bincode = "1.3.3"

[[bench]]
name = "commit"
harness = false


[[bench]]
name = "poly_verify"
harness = false

[[bench]]
name = "create_witness"
harness = false

[[bench]]
name = "poly_arithmetic"
harness = false

[[bench]]
name = "fft"
harness = false
